feat: Use Collection instead of List for revive screen.
Switched index-based accessing to iterator-based accessing.